# openapi.yaml
@@ -42,6 +42,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/admin_dhb/admin_withdraw_rel_amount_fix:
+        get:
+            tags:
+                - App
+            operationId: App_AdminWithdrawRelAmountFix
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminWithdrawRelAmountFixReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/all:
         get:
             tags:
@@ -1266,6 +1284,9 @@ components:
                     type: string
                 status:
                     type: string
+        AdminWithdrawRelAmountFixReply:
+            type: object
+            properties: {}
         AdminWithdrawReply:
             type: object
             properties: {}
